--- a/src/pages/report/views/report-views/style/report-views.less
+++ b/src/pages/report/views/report-views/style/report-views.less
@@ -1,183 +1,127 @@
-@primary-color: #6f6dd8;
+@primary-color: #299be4;
 @hover-color: #5a5aba;
 @left-border: #f6bf00;
 @border-gray: #f6f8f9;
 @yellow-hover: #f90;
 
-.report-views {
-  padding: 20px 40px;
-  .report-title {
-    font-size: 24px;
-    text-align: center;
-    color: #666;
-    font-weight: 600;
-    line-height: 1;
-    padding: 20px;
-  }
-  .report-user {
-    font-size: 20px;
-    text-align: center;
-    color: #666;
-    font-weight: 600;
-    line-height: 1;
-  }
-  .report-list {
-    padding: 10px;
-    .report-list-title {
-      font-size: 0;
-      padding: 10px 0px 20px 0;
+.shadow{
+  box-shadow: 0 0 10px #ccc;
+}
+.loading{
+  color: @primary-color;
+}
+.report-search{
+  background: #f6f8f9;
+  padding: 8px 15px 8px 20px;
+  margin-bottom: 10px;
+  .form-group{
+    display: inline-block;
+    height: 35px;
+    line-height: 35px;
+    .control-label{
+      vertical-align: middle;
+      color: #666;
+      font-size: 14px;
+      width: 70px;
+      text-align: right;
+    }
+    .select2-container{
+      width: 163px;
+    }
+    .get-report{
+      display: inline-block;
+      padding: 0 12px;
+      margin-bottom: 0;
+      margin-left: 45px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 30px;
+      height: 30px;
       text-align: center;
-      .report-list-title-line {
-        position: relative;
-        display: inline-block;
-        &:after {
-          content: ' ';
-          display: block;
-          width: 100%;
-          height: 1px;
-          background: @primary-color;
-          position: absolute;
-          top: 50%;
-          left: 0;
-          z-index: 0;
-        }
-      }
-      label {
-        position: relative;
-        z-index: 1;
-        display: inline-block;
-        padding: 0 120px;
-        &::before,
-        &::after {
-          content: ' ';
-          display: block;
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          position: absolute;
-          z-index: 2;
-          background: @primary-color;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-        &::before {
-          left: 115px;
-        }
-        &::after {
-          right: 115px;
-        }
-      }
-      span {
-        position: relative;
-        z-index: 1;
-        display: inline-block;
-        font-size: 18px;
-        color: @primary-color;
-        font-weight: 600;
-        line-height: 1;
-        padding: 0 30px;
-        background: #fff;
-        min-width: 160px;
-      }
+      white-space: nowrap;
+      vertical-align: middle;
+      -ms-touch-action: manipulation;
+      touch-action: manipulation;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      background-color: #299be4;
+      border-color: #299be4;
+      color: #FFFFFF;
+      user-select: none;
+      background-image: none;
+      border: 1px solid transparent;
+      border-radius: 4px;
     }
-    .report-list-second {
-      padding-bottom: 30px;
-      margin-top: 30px;
-      border: 1px solid #e2e3e3;
-      .report-list-third {
-        padding: 15px 20px;
-        border-bottom: 1px solid #e2e3e3;
-        &:last-child {
-          border-bottom: 0;
-        }
-      }
-    }
-    .report-list-title-second {
-      padding-bottom: 20px;
-      position: relative;
-      font-size: 0;
-      &::after {
-        content: ' ';
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background: @primary-color;
-      }
-      span {
-        font-size: 16px;
-        line-height: 1;
-        padding: 10px 30px;
-        background: @primary-color;
-        display: inline-block;
-        color: #fff;
-        position: relative;
-        &::after {
-          content: ' ';
-          display: block;
-          position: absolute;
-          width: 0;
-          height: 0;
-          border-top: 34px solid @primary-color;
-          border-right: 15px solid transparent;
-          left: 100%;
-          top: 0;
-        }
-      }
-    }
-    .report-list-title-third {
-      padding: 10px 0 10px 40px;
-      font-size: 0;
-      .star {
-        margin-right: 10px;
-        font-size: 16px;
-        color: @primary-color;
-      }
-      span {
-        display: inline-block;
-        font-size: 14px;
-        color: @primary-color;
-        font-weight: 600;
-        line-height: 1;
-      }
-    }
-  }
-  .report-list-second {
-    // padding: 0 60px;
-    font-size: 14px;
-    color: #666666;
-    .indent {
-      text-indent: 28px;
-    }
-  }
-  .report-list .text p {
-    // padding: 0 60px;
-    font-size: 14px;
-    color: #666666;
-    &.indent {
-      text-indent: 28px;
-    }
-  }
-  .report-table {
-    padding: 10px 0;
-  }
-  .charts-con {
-    width: 100%;
-    height: 600px;
-    .echarts {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .top-table {
-    margin-bottom: 30px;
   }
 }
+.manage-report{
+  // width: 1300px;
+  margin: 0 auto;
+  // padding-top: 50px;
+  // padding-bottom: 30px;
+  // display: flex;
+  height: 100%;
+  // min-height: 800px;
+  // flex-direction: column;
+  .report-title{
+      // padding-top: 20px;
+      padding-bottom: 10px;
+      border-bottom:1px solid #dddee1;
+  }
+  .rep-title,.rep-user {
+    font-size: 18px;
+    text-align: center;
+    line-height: 26px;
+    font-weight: 600;
+  }
+  .report-main{
+      // display: flex;
+      // flex: 1;
+      // flex-direction: column;
+  }
+  .report-content{
+      display: flex;
+      width: 100%;
+      // flex: 1;
+      .report-con-left {
+        width: 200px;
+        min-width: 200px;
+        min-height: 100%;
+        position: relative;
+        overflow-y: auto;
+      }
+      .report-con-left::after {
+        content: '';
+        display: block;
+        width: 1px;
+        height: 100%;
+        background: #dddee1;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+      }
+      .report-con-right {
+          flex: 1;
+          height: 100%;
+          max-height: 100%;
+          padding: 10px 15px;
+          overflow-y: auto;
+      }
+  }
+/*滚动条垂直方向的宽度*/
+::-webkit-scrollbar
+{
+  width: 5px;
+}
+/* 垂直滚动条的滑动块 */
+::-webkit-scrollbar-thumb:vertical {
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color:rgba(129,129,129,0.5);
+}
 
-.report-error {
-  padding: 40px;
-  font-size: 16px;
-  color: #ed3f14;
 }
